COMMERCE-1757 minium dropdown z-index fixed

--- a/commerce-theme-minium/commerce-theme-minium/src/css/minium/overrides/_base.scss
+++ b/commerce-theme-minium/commerce-theme-minium/src/css/minium/overrides/_base.scss
@@ -20,3 +20,6 @@ button {
 .dropdown-menu {
 	z-index: 1200;
 }
+.dropdown-menu {
+	z-index: 1200;
+}
